# nz_harold

./: .gitignore  .pre-commit-config.yaml  README.rst  fabfile.py  pyproject.toml
notebooks/: testing.py
nzharold/: __init__.py  app.py  gunicorn_config.py  index.py  settings.py  user_management.py  wsgi.py
nzharold/pages/: error_404.py  login.py  logout.py  main.py
tests/: context.py  test_main.py
